chnage somthing and resolve the spacing issues & put the animation

--- a/css/Header.css
+++ b/css/Header.css
@@ -44,8 +44,8 @@
 
     .float {
         position: fixed;
-        width: 60px;
-        height: 60px;   
+        width: 87px;
+        height: 85px;   
         bottom: 68px;
         right: 23px;
         cursor: pointer;
